[gd_scene load_steps=10 format=3 uid="uid://vlkesejcqdun"]

[ext_resource type="Script" path="res://gameScreens/trainingScene.gd" id="1_b3dd8"]
[ext_resource type="PackedScene" uid="uid://bvwyvrq6v7t51" path="res://Sprites/bola.tscn" id="2_xcmqw"]
[ext_resource type="PackedScene" uid="uid://b4l7xsy7libgv" path="res://Sprites/inimigo.tscn" id="4_1b722"]
[ext_resource type="PackedScene" uid="uid://baswixh26fstw" path="res://Sprites/PlayerSolo.tscn" id="4_wokfb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub0r0"]
size = Vector2(51, 664)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_v5nlv"]
a = Vector2(1152, 6)
b = Vector2(-5, 7)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_d4twt"]
a = Vector2(1100.35, 0)
b = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_weeq3"]
size = Vector2(10, 653)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5ledf"]
a = Vector2(-1, 653)

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_b3dd8")

[node name="Bola" parent="." instance=ExtResource("2_xcmqw")]
position = Vector2(540, 131)
collision_layer = 2
collision_mask = 5

[node name="ParedeEsquerda" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedeEsquerda"]
position = Vector2(15.5, 320)
shape = SubResource("RectangleShape2D_ub0r0")

[node name="limiteInferior" type="StaticBody2D" parent="."]
position = Vector2(0, 644)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="limiteInferior"]
shape = SubResource("SegmentShape2D_v5nlv")

[node name="limiteSuperior" type="StaticBody2D" parent="."]
visible = false
scale = Vector2(1.00241, 1)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="limiteSuperior"]
visible = false
position = Vector2(43.8942, 3)
shape = SubResource("SegmentShape2D_d4twt")

[node name="paredeDireita" type="Area2D" parent="."]
visible = false
position = Vector2(1141, 2)
collision_layer = 4
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredeDireita"]
position = Vector2(5, 316.5)
shape = SubResource("RectangleShape2D_weeq3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 83.0

[node name="Timer" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -40.0
offset_right = 46.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 4.0
offset_right = -981.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="CounterDireita" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -40.5
offset_right = 50.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -178.0
offset_top = 2.0
offset_bottom = 76.0
grow_horizontal = 0

[node name="CounterEsquerda" type="Label" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -40.5
offset_right = 49.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="PD" type="StaticBody2D" parent="."]
position = Vector2(1148, 0)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PD"]
shape = SubResource("SegmentShape2D_5ledf")

[node name="PE" type="StaticBody2D" parent="."]
position = Vector2(1, 2)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PE"]
shape = SubResource("SegmentShape2D_5ledf")

[node name="Inimigo" parent="." instance=ExtResource("4_1b722")]
position = Vector2(1062, 285)
rotation = -3.14159
scale = Vector2(0.5, 0.5)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("4_wokfb")]
position = Vector2(81, 310)

[connection signal="area_entered" from="ParedeEsquerda" to="." method="_on_parede_esquerda_area_entered"]
[connection signal="body_entered" from="ParedeEsquerda" to="." method="_on_parede_esquerda_body_entered"]
[connection signal="body_entered" from="paredeDireita" to="." method="_on_parede_direita_body_entered"]
